GNOME Bugzilla – Bug 671801
i18n doesn't work
Last modified: 2012-03-24 23:02:21 UTC
Just tested version 0.8.0 in Fedora 16. The package contains all the *.po files, but the interface is in English. Only some things seem to be translated (the strings which come from GTK and probably other libs). Even after typing "export LC_ALL=de_DE" (or "de") and "almanah" in a command line I don't get the interface in German. The "About" dialog doesn't show any translator name. Remember the recent problems in Hitori v0.3.0. Seems to be the same one.
Well spotted, thanks. It was exactly the same problem as in Hitori. :-( I'll try and make a release soon with the fix. commit 542a426082f89e965a22af6e97c4ce06beefa45e Author: Philip Withnall <philip@tecnocode.co.uk> Date: Sat Mar 24 23:00:12 2012 +0000 Bug 671801 — i18n doesn't work Commit 01084bd42ad2747cc582274a3988f17bcf23d6f3 removed AM_GNU_GETTEXT, meaning that ENABLE_NLS was *never* defined. This effectively disabled i18n for everyone. Closes: https://bugzilla.gnome.org/show_bug.cgi?id=671801 src/application.c | 2 -- 1 files changed, 0 insertions(+), 2 deletions(-)