Bug 671801 — i18n doesn't work

Commit 01084bd42ad2747cc582274a3988f17bcf23d6f3 removed AM_GNU_GETTEXT,
meaning that ENABLE_NLS was *never* defined. This effectively disabled i18n
for everyone.

Closes: https://bugzilla.gnome.org/show_bug.cgi?id=671801